package pagos;

public interface MetodoPago {
    void procesarPago(double monto);
}
