package televentas.api;

public interface IPago {
    void procesarPago(double monto);
}
