package usuarios;

public class AgenteDeposito extends Usuario {
    public AgenteDeposito() { super(); }
    public AgenteDeposito(String nombre, String email) { super(nombre, email); }
}
