package usuarios;

public class GerenteRelaciones extends Usuario {
    public GerenteRelaciones() { super(); }
    public GerenteRelaciones(String nombre, String email) { super(nombre, email); }
}
