@startuml televentas
' Televentas UML - PlantUML version

abstract class Usuario {
  - String nombre
  - String email
  + autenticar()
}

class Cliente
class AgenteDeposito
class GerenteRelaciones
Usuario <|-- Cliente
Usuario <|-- AgenteDeposito
Usuario <|-- GerenteRelaciones

class Producto {
  - String codigo
  - String descripcion
  - double precio
}

class ItemOrden {
  - int cantidad
  - double precioUnitario
  + getCantidad(): int
  + getPrecioUnitario(): double
}

class OrdenCompra {
  - String codigo
  - Date fecha
  - EstadoOrden estado
  - boolean empacado
  - String transportista
  + calcularTotal(): double
  + confirmar(): void
  + cancelar(): void
  + marcarEmpacado(): void
  + asignarTransportista(String): void
}

class Queja {
  - String motivo
  - Date fecha
}

enum EstadoOrden {
  PENDIENTE
  CONFIRMADA
  CANCELADA
}

' Relaciones
OrdenCompra "1" *-- "1..*" ItemOrden : contiene
ItemOrden "*" --> "1" Producto : refiere
Cliente "1" --> "*" OrdenCompra
Cliente "1" --> "*" Queja
Queja --> GerenteRelaciones : remitida a

note right of OrdenCompra : El ticket/orden incluye items;\nal confirmar se actualiza stock,\nse puede marcar empacado y asignar transportista.

interface MetodoPago {
  + procesarPago(monto : double)
}

class PagoTarjetaCredito {
  + procesarPago(monto : double)
}
PagoTarjetaCredito ..|> MetodoPago

interface ISistemaInventario {
  + consultarStock(codigo : String) : int
  + actualizarStock(codigo : String, cantidad : int)
}
class InMemoryInventario
InMemoryInventario ..|> ISistemaInventario

interface IOrdenService {
  + crearOrden(orden : OrdenCompra)
  + confirmarOrden(codigo : String)
  + cancelarOrden(codigo : String)
}

class OrdenService {
  - ISistemaInventario inventario
  - MetodoPago metodoPago
  + procesarOrden(orden : OrdenCompra)
  + obtenerOrdenesConfirmadas() : List<OrdenCompra>
  + marcarEmpacado(orden : OrdenCompra)
  + asignarTransportista(orden : OrdenCompra, transportista : String)
  + cancelarOrden(orden : OrdenCompra)
}

class PagoTarjetaAdapter
class OrdenServiceAdapter

IOrdenService <|.. OrdenServiceAdapter
OrdenService ..|> IOrdenService
PagoTarjetaAdapter ..> PagoTarjetaCredito : adapta
OrdenService ..> ISistemaInventario : usa
OrdenService ..> MetodoPago : usa

class CatalogoService {
  + agregarProducto(p : Producto)
  + getProductos() : List<Producto>
}

class QuejaService {
  + registrarQueja(cliente : Cliente, q : Queja)
}

class TeleventasGUI {
  + main(args)
  - IOrdenService ordenService
  - IPago pago
}

' Uso
Cliente --> IOrdenService : usa
Cliente --> QuejaService : usa
Cliente --> CatalogoService : consulta
QuejaService --> GerenteRelaciones : notifica
TeleventasGUI --> IOrdenService : utiliza
TeleventasGUI --> MetodoPago : utiliza
TeleventasGUI --> CatalogoService : muestra

note left of TeleventasGUI : TeleventasGUI es la interfaz cliente/operador (demo Swing).\nEn una implementación web esto se mapearía a controladores/servlets.

@enduml
@startuml
' Televentas - Diagrama de clases (interfaces + impls)
package televentas.api {
  interface IPago {
    + procesarPago(monto: double)
  }

  interface IOrdenService {
    + crearOrden(orden: modelos.OrdenCompra)
    + confirmarOrden(codigo: String)
    + cancelarOrden(codigo: String)
  }
}

package pagos {
  class PagoTarjetaCredito {
    + procesarPago(monto: double)
  }
}

package inventario {
  interface ISistemaInventario {
    + consultarStock(codigo: String): int
    + actualizarStock(codigo: String, cantidad: int)
  }

  class InMemoryInventario {
    + consultarStock(codigo: String): int
    + actualizarStock(codigo: String, cantidad: int)
  }
}

package servicios {
  class OrdenService {
    + procesarOrden(orden: modelos.OrdenCompra)
  }
}

package televentas.impl {
  class PagoTarjetaAdapter
  class OrdenServiceAdapter
}

package televentas {
  class TeleventasGUI
}

' Relaciones
IPago <|.. PagoTarjetaAdapter
IOrdenService <|.. OrdenServiceAdapter
PagoTarjetaCredito ..|> IPago
InMemoryInventario ..|> ISistemaInventario
OrdenServiceAdapter ..> servicios.OrdenService
PagoTarjetaAdapter ..> pagos.PagoTarjetaCredito
TeleventasGUI --> IPago : usa
TeleventasGUI --> IOrdenService : usa
TeleventasGUI --> inventario.InMemoryInventario : usa

@enduml
